feat: illustrate issues with type expanding with ModelAttributes
