# app/controllers/return_types_controller.ts
@@ -1,3 +1,6 @@
+import User from '#models/user'
+import type { ModelAttributes } from '@adonisjs/lucid/types/model'
+
 export default class ReturnTypesController {
   async weirdStringEntries() {
     // weird string[] expanding
@@ -14,4 +17,27 @@ export default class ReturnTypesController {
       entriesArrayCompact,
     }
   }
+
+  async enrichModel() {
+    const users = await User.all()
+
+    return {
+      usersBuggy: users.map(
+        (u): EnrichModel => ({
+          ...(u.$attributes as ModelAttributes<User>),
+          password: null,
+          mailto: `${u.fullName} <${u.email}>`,
+        })
+      ),
+      usersFixed: users.map((u) => ({
+        ...(u.$attributes as ModelAttributes<User>),
+        password: null,
+        mailto: `${u.fullName} <${u.email}>`,
+      })),
+      users,
+      serializedUsers: users.map((u) => u.serialize()),
+    }
+  }
 }
+
+type EnrichModel = Omit<ModelAttributes<User>, 'password'> & { mailto: string; password: null }
